# controllers/ProductController.js
@@ -610,3 +610,54 @@ exports.getInvoice = catchAsync(async (req, res, next) => {
     invoice
   });
 });
+
+exports.getTransactionsbyInvoiceId = catchAsync(async (req, res, next) => {
+  // #swagger.tags = ['Product']
+  const invoiceId = req.params.invoiceId;
+
+  const invoice = await Invoice.findOne({ invoiceId });
+
+  const transactions = invoice.transactions
+
+  const transactionsId = transactions.map((el) => el._id.toString());
+
+  const transactionsDetails = await Transactions.find({
+    _id: { $in: transactionsId },
+  });
+
+  res.status(200).json({
+    status: "Success",
+    transactionsDetails
+  });
+});
+
+
+exports.changeTransactionStatus = catchAsync(async (req, res, next) => {
+  // #swagger.tags = ['Product']
+  const transactionId = req.params.id;
+  const { status } = req.body;
+
+  const transaction = await Transactions.findById(transactionId);
+
+  const transactionOwner = transaction.product.owner._id.toString();
+  const transactionsStatus = transaction.status;
+
+  if(transactionOwner !== req.user.id) {
+    return next(new AppError("You are not allowed to update this transaction", 400));
+  }
+
+  if(transactionsStatus.find((el) => el.status === status)) {
+    return next(new AppError("This status has been already added", 400));
+  }
+
+  transaction.status.push({
+    status: status,
+    date: Date.now(),
+  });
+  await transaction.save();
+
+  res.status(200).json({
+    status: "Success",
+    message: "Transaction status updated successfully"
+  });
+});
